salesforce/force-app/main/default/objects/External_File__c/External_File__c.object-meta.xml
<CustomObject>
    <label>External File</label>
    <pluralLabel>External Files</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>