salesforce/force-app/main/default/objects/External_File__c/fields/Backend__c.field-meta.xml
<CustomField>
    <fullName>Backend__c</fullName>
    <label>Backend</label>
    <type>Text</type>
    <length>20</length>
</CustomField>