salesforce/force-app/main/default/objects/External_File__c/fields/Object_Key__c.field-meta.xml
<CustomField>
    <fullName>Object_Key__c</fullName>
    <label>Object Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>