salesforce/force-app/main/default/objects/External_File__c/fields/Original_ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_ContentVersion_Id__c</fullName>
    <label>Original ContentVersion Id</label>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
</CustomField>