salesforce/force-app/main/default/objects/External_File__c/fields/Original_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Name__c</fullName>
    <label>Original Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>