salesforce/force-app/main/default/objects/External_File__c/fields/Presigned_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Presigned_Expires_At__c</fullName>
    <label>Presigned Expires At</label>
    <type>DateTime</type>
</CustomField>