salesforce/force-app/main/default/objects/External_File__c/fields/Presigned_Url__c.field-meta.xml
<CustomField>
    <fullName>Presigned_Url__c</fullName>
    <label>Presigned URL</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>