salesforce/force-app/main/default/objects/External_File__c/fields/Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Size_Bytes__c</fullName>
    <label>Size (bytes)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>