salesforce/force-app/main/default/objects/External_File__c/fields/Storage_Class__c.field-meta.xml
<CustomField>
    <fullName>Storage_Class__c</fullName>
    <label>Storage Class</label>
    <type>Text</type>
    <length>20</length>
</CustomField>