salesforce/force-app/main/default/objects/External_File__c/fields/Vastify_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Vastify_File_Id__c</fullName>
    <label>Vastify File Id</label>
    <type>Text</type>
    <length>36</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>